--- a/_config.yml
+++ b/_config.yml
@@ -18,27 +18,27 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Blog Title # Make a title for your blog
-email: author_email@email.com # Add your email 
+title: Max's 386 Blog # Make a title for your blog
+email: maxsprice@email.com # Add your email 
 description: >- # this means to ignore newlines until "baseurl:"
- Change the description so that it describes your blog
+ This blog is a compilation of my work from Stat 386.
 baseurl: "/stat386-projects" # keep this the same or change it to the name of the repository 
-url: "https://esnt.github.io" #  change this to "https://<your-github-username>.github.io"
+url: "https://maxsprice.github.io" #  change this to "https://<your-github-username>.github.io"
 image: "assets/images/image5.jpg"
-author: Your name
+author: Max Price
 copyright: ABCD # Your initials or what you want the copyright to be.  Leave empty for no copyright
 
 # Social media users names.  Leave fields blank that you don't want displayed
-twitter_username: 386student
-github_username:  386student
-linkedin_username: 386student
+twitter_username: 
+github_username:  maxsprice
+linkedin_username: Max Price
 dribbble_username: 
-facebook_username: 386student
+facebook_username: Max Price
 flickr_username:
-instagram_username: 
+instagram_username: rooberdoober
 pinterest_username:
 youtube_username: 
-googleplus_username: 386student
+googleplus_username:
 
 
 # Build settings
