--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Max's 386 Blog # Make a title for your blog
-email: maxsprice@email.com # Add your email 
+email: maxsprice@gmail.com # Add your email 
 description: >- # this means to ignore newlines until "baseurl:"
  This blog is a compilation of my work from Stat 386.
 baseurl: "/stat386-projects" # keep this the same or change it to the name of the repository 
